2007-10-04  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/gzip.texi: Adjust to new fdl.texi format, in gnulib.

	* Makefile.am (gzip.doc.gz, check-local): Depend on $(bin_PROGRAMS).
	(gzip.doc.gz): Use our gzip, not the system-installed one.
	Problem reported by Chris Staub in
	<http://lists.gnu.org/archive/html/bug-gzip/2007-10/msg00000.html>.

2007-07-03  Paul Eggert  <eggert@cs.ucla.edu>

	* COPYING: Update to GPLv3.  All uses changed.

2007-06-13  Paul Eggert  <eggert@cs.ucla.edu>

	* zless.1: Fix some troff typos mentioned in the latest Debian patch.
	Also, give a workaround for the pipe problem.

	* gzip.c (copy_stat): Adjust to gnulib's renaming of futimens to
	gl_futimens.

2007-06-04  Paul Eggert  <eggert@cs.ucla.edu>

	* gzip.c (get_method): Fix typo: "a a" -> "a" in diagnostic.  Reported
	by Justin Pryzby in Debian bug 426965 <http://bugs.debian.org/426965>.

2007-05-07  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: 'gzip -f foo.gz' now works instead of complaining.
	* gzip.c (make_ofname): Implement this.
	Problem reported by Sven Hartrumpf in
	<http://lists.gnu.org/archive/html/bug-gzip/2007-05/msg00003.html>.

	* NEWS, gzip.1: Document that case is ignored when looking at file name
	extensions.
	* doc/gzip.texi (Overview): Likewise.

2007-05-04  Paul Eggert  <eggert@cs.ucla.edu>

	* Makefile.am (.in): Substitute @bindir@, not BINDIR, for
	consistency with other substitutions.
	(check-local): Use --__bindir . rather than setting GZIP_BINDIR=.,
	to allay security concerns voiced by Joerg Lehners in
	<http://lists.gnu.org/archive/html/bug-gzip/2007-04/msg00003.html>.
	* gunzip.in, gzexe.in, zcat.in, zcmp.in, zdiff.in, zegrep.in, zfgrep.in:
	* zforce.in, zgrep.in, zless.in, zmore.in, znew.in:
	Support --__bindir rather than GZIP_BINDIR.

	* gunzip.in, zcat.in, zcmp.in: Support --help and --version
	directly, to avoid some confusion in help and version output.
	Problem reported by Eric Blake in
	<http://lists.gnu.org/archive/html/bug-gzip/2007-04/msg00006.html>.