@@ -1,3 +1,10 @@
+2007-11-25  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* gzip.c (handled_sig): Move out of install_signal_handlers, and
+	move previous to all uses of SIGPIPE, to fix a bug encountered when
+	porting to mingw32.  Reported by Robert Millan in
+	<http://lists.gnu.org/archive/html/bug-gzip/2007-11/msg00007.html>.
+
 2007-10-04  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* doc/gzip.texi: Adjust to new fdl.texi format, in gnulib.
